--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Photoshop <i class="val">32%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -218,8 +218,8 @@
               <p><em>Innovative and can developing marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Jalan Pancasan Baru</li>
-                <li>(123) 456-7891</li>
-                <li>myemail@gmail.com</li>
+                <li>+625174391445</li>
+                <li>freehex45@gmail.com</li>
               </ul>
             </div>
 
@@ -255,13 +255,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>myemail@gmail.com</p>
+                <p>freehex45@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+62 123 456 789</p>
+                <p>+625174391445</p>
               </div>
             </div>
           </div>
@@ -304,8 +304,6 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
